--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -13,3 +13,20 @@ body .ui-dialog .ui-dialog-titlebar {
 .customCellStyle {
     background-color: yellow;
 }
+
+body .ui-datatable .ui-datatable-data>tr {
+    color: #333;
+}
+
+body .ui-datatable thead th {
+    color: #333;
+}
+
+body .ui-datatable .ui-datatable-header {
+    color: #333;
+    background: #f4f4f4;
+}
+
+body .ui-datatable thead th {
+    background: #f4f4f4;
+}
